# Hybrid-Sensitivity-Weighted-Quantization

./: .cursorrules  .gitignore  .mailmap  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  fp8bench_flux.py  hswq_sd15_comfy_loader.py  hswq_sd15_mapping.py  native_convert_fp8.py  push_clip.ps1  push_clip_msg.txt  push_rm_gitignore.ps1  pyproject.toml  quantize_flux_hswq_v1.2.py  quantize_flux_hswq_v1.5.py  quantize_flux_hswq_v1.6.py  quantize_sd15_hswq_v1.py  quantize_sdxl_hswq_v1.2.py  quantize_sdxl_hswq_v1.3.py  quantize_sdxl_hswq_v1.5.py  quantize_sdxl_hswq_v1.6.py  quantize_zib_hswq_v1.9.py  quantize_zib_hswq_v1.92.py  quantize_zit_hswq_v1.5.py  quantize_zit_hswq_v1.6.py  quantize_zit_hswq_v1.py  release_notes_v1.0.5.md  remove_msg.txt  remove_tracked.ps1  rm_gitignore_msg.txt  setup.py  test_optimization_equivalence.py  weighted_histogram_mse.py  weighted_histogram_mse_fast.py  weighted_histogram_mse_v4.py  zit_bench.py
analyze/: __init__.py  analyze_zib_distribution.py
archives/: quantize_flux_hswq_v1.2.py  quantize_flux_hswq_v1.5.py  quantize_flux_hswq_v1.6(old).py  quantize_sdxl_hswq_v1.1.py  quantize_sdxl_hswq_v1.2(disabled_sa).py  quantize_sdxl_hswq_v1.2(old).py  quantize_sdxl_hswq_v1.2.py  quantize_sdxl_hswq_v1.3(+sa).py  quantize_sdxl_hswq_v1.3(random_seed).py  quantize_sdxl_hswq_v1.5.py  quantize_sdxl_hswq_v1.6.py  quantize_sdxl_hswq_v1.py  quantize_sdxl_hswq_v2.1_scaled.py  quantize_sdxl_hswq_v2_scaled.py  quantize_zib_hswq_v1.9.py  quantize_zit_hswq_v1.5.py  quantize_zit_hswq_v1.py
benchmark/: fp8bench_enhanced.py  fp8bench_flux.py  zit_bench.py  (+1 more)
(+34 files in other folders)
