[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hybrid-Sensitivity-Weighted-Quantization"
version = "2.0.0"
description = "HSWQ(Hybrid-Sensitivity-Weighted-Quantization) is a groundbreaking fp8e4m3 quantisation method that applies the principles of weighted histogram methods and SVDQ."
authors = [{ name = "ussoewwin" }]
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "requests",
]

[project.scripts]
hswq-quantize-sd15 = "quantize_sd15_hswq_v1:main"

[project.urls]
Repository = "https://github.com/ussoewwin/Hybrid-Sensitivity-Weighted-Quantization"

[tool.comfy]
PublisherId = "ussoewwin"
DisplayName = "HSWQ"
Icon = "https://raw.githubusercontent.com/ussoewwin/Hybrid-Sensitivity-Weighted-Quantization/main/icon.png"
